2012-03-12  Murray Cumming  <murrayc@murrayc.com>

	LayoutItem_GroupBy: Add get and set methods for members.

	* glom/libglom/data_structure/layout/report_parts/layoutitem_groupby.[h|cc]: 
	Make the members private, adding getters. With smartpointers, the direct 
	access is not necessary for performance.
	* glom/libglom/document/document.cc:
	* glom/libglom/report_builder.cc:
	* glom/mode_design/layout/layout_item_dialogs/dialog_group_by.cc: Adapted.

2012-03-12  Murray Cumming  <murrayc@murrayc.com>

	libglom: LayoutGroup: Remove deprecated remove_field() and has_field().

	* glom/libglom/data_structure/layout/layoutgroup.[h|cc]: Remove 
	deprecated method overloads.

1.21.6:

2012-03-05  Murray Cumming  <murrayc@murrayc.com>

	Utils::get_find_where_clause_quick(): Handle an empty value properly.

	* glom/libglom/utils.cc: get_find_where_clause_quick():
	Handle an empty quick_search value properly, returning an empty
	where clause.

2012-03-03  Ben Konrath  <ben@bagu.org>

	Remove empty group in the Lesson Planner example file.

	The empty group was at the bottome of the Rooms table details view.

	https://bugzilla.gnome.org/show_bug.cgi?id=671263

	* examples/example_lesson_planner.glom:

2012-03-03  Murray Cumming  <murrayc@murrayc.com>

	Remove remaining uses of deprecated Gtk::Main API.

2012-03-01  Murray Cumming  <murrayc@murrayc.com>

	Add a unistd.h include to fix the mingw MS Windows build.

	* glom/glom_create_from_example.cc: include unistd.h for getpass().
	Bug #671120 (alien)

2012-03-01  Murray Cumming  <murrayc@murrayc.com>

	Make auto-increment fields work even if they are not primary keys.

	* glom/libglom/db_utils.h: get_next_auto_increment_value(): Document that
	this also increments the value ready for the next call.
	* glom/base_db_table_data.cc: record_new(): Decide auto-increment values
	as well as just default values and calculated values. And do this while
	building the SQL, instead of first setting it in the widget, because we